# exec-pe-forensic

./: Cargo.toml  README.md  deny.toml  mkdocs.yml  release-plz.toml  renovate.json
.github/workflows/: release-plz.yml  vet.yml
crates/exec-pe-analysis/: Cargo.toml
crates/exec-pe-analysis/src/: anomalies.rs  anti_debug.rs  av_exclusion.rs  credential.rs  dotnet.rs  ioc.rs  lib.rs  network_iocs.rs  overlay.rs  packed.rs  persistence.rs  process_hollowing.rs  ransomware.rs  suspicious_imports.rs  tls_callbacks.rs
crates/exec-pe-core/: Cargo.toml
crates/exec-pe-core/src/: anomalies.rs  error.rs  lib.rs  parser.rs  rich_header.rs  strings.rs
crates/exec-pe-core/tests/: canonical_finding_tests.rs
crates/pe-analysis/: Cargo.toml
crates/pe-analysis/src/: anomalies.rs  anti_debug.rs  av_exclusion.rs  credential.rs  dotnet.rs  ioc.rs  lib.rs  network_iocs.rs  overlay.rs  packed.rs  persistence.rs  process_hollowing.rs  ransomware.rs  suspicious_imports.rs  tls_callbacks.rs
crates/pe-core/: Cargo.toml
crates/pe-core/src/: anomalies.rs  lib.rs  parser.rs  rich_header.rs  strings.rs
crates/pe-core/tests/: canonical_finding_tests.rs
docs/: PRD.md  index.md  privacy.md  terms.md
docs/decisions/: 0001-two-crate-reader-detector-split.md  0002-crate-naming-exec-pe-prefix.md  0003-reuse-goblin-for-pe-parsing.md  0004-knowledge-as-code-forensicnomicon.md  0005-canonical-report-finding-observation.md  0006-safety-and-panic-posture.md  0007-low-msrv-floor-under-pinned-toolchain.md
supply-chain/: config.toml
