[workspace]
resolver = "2"
members = [
    "crates/pe-core",
    "crates/pe-analysis",
]

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Albert Hui <albert@securityronin.com>"]
repository = "https://github.com/SecurityRonin/exec-pe-forensic"

[workspace.dependencies]
# Internal
pe-core     = { path = "crates/pe-core" }
pe-analysis = { path = "crates/pe-analysis" }

# Knowledge layer (sibling repo)
forensicnomicon = { path = "../forensicnomicon" }

# PE parsing
goblin = { version = "0.10", default-features = false, features = ["pe32", "pe64", "std"] }

# Error handling
thiserror = "2"

# Hashing
sha2 = "0.10"
hex  = "0.4"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Dev / test
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
