[package]
name = "exec-pe-analysis"
version = "0.2.0"
description = "Forensic detectors for PE binaries — suspicious imports, packing, AV exclusions, IOCs"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
exec-pe-core    = { workspace = true }
forensicnomicon = { workspace = true }
thiserror       = { workspace = true }
serde           = { workspace = true }

[lints]
workspace = true
